--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
 
 #hjälp {
 	float: right;
+	padding-right: 10px;
+	padding-top: 20px;
 }
 
 #logga {
@@ -28,8 +30,14 @@ body {
 	background-color: lightgray;
 }
 
-h1 {
+#titel  {
 	text-align: center;
+	padding-top: 50px;
+}
+
+#txt {
+	padding-left: 20px;
+	padding-right: 20px;
 }
 
 .navbar {
