--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 #loggadiv {
-	width: 1200px;
-	height: 120pX;
+	width: 76%;
+	height: 120px;
 	margin: auto;
 	background-color: #eee;
 	font-family: 'Exo', sans-serif;
@@ -8,18 +8,15 @@
 
 #hjälp {
 	float: right;
-
-	padding-right: 100px;
-	padding-top: 5px;
 }
 
 #logga {
 	float: left;
-	margin-top: 75px;
+	margin-top: 10px;
 }
 
 #bg {
-	width: 1200px;
+	width: 76%;
 	height: 2000px;
 	background-color: white;
 	margin: auto;
@@ -37,24 +34,28 @@ body {
 }
 
 #txt {
-	padding-left: 20px;
-	padding-right: 20px;
+	padding-left: 3%;
+	padding-right: 3%;
 }
 
 .navbar {
 	background-color: #121212;
 	padding-top: 3px;
 	padding-bottom: 3px;
-	padding-left: 7px;
+	padding-left: 0.50%;
 	margin-left: 12%;
 	margin-right: 12%;
 }
 
 .navbarsize {
-	width: 298px;
+	width: 25%;
 	font-family: "Arial";
 	font-size: 20px;
 	text-align: center;
+}
+
+#ul1 {
+	width: 100%;
 }
 
 .navbarsize:hover, .navcolor:hover  {
@@ -76,4 +77,9 @@ a.navcolor, a.navcolor:hover {
 
 a {
 	font-family: 'Exo', sans-serif;
+}
+
+#underBild {
+	width: 95%
+
 }
