--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 
 #bg {
 	width: 76%;
-	height: 2000px;
+	height: 1200px;
 	background-color: white;
 	margin: auto;
 	margin-top: -20px;
@@ -25,7 +25,8 @@
 }
 
 body {
-	background-color: lightgray;
+	background-image: url("bg.jpg");
+	background-attachment: fixed;
 }
 
 #titel  {
@@ -82,4 +83,49 @@ a {
 #underBild {
 	width: 95%
 
+}
+
+.flex-container {
+ 	display: -webkit-flex;
+    display: flex;
+    width: 90%;
+    height: 310px;
+    background-color: white;
+    margin: auto;
+    }
+
+#text {
+	border:3px; border-style:solid; border-color:#121212; padding: 1em;
+}
+
+.flex-item {
+    background-color: #121212;
+    width: 280px;
+    height: 280px;
+    margin: 40px;
+    font-size: 20px;
+    }
+
+.bilder3 {
+	width: 280px;
+	padding-bottom: 20px;
+}
+
+#pictureheader {
+	text-align: center;
+	padding-top: 20px;
+}
+
+#footer {
+	float: bottom;
+	background-color: gray;
+	margin-right: 12%;
+	margin-left: 12%;
+	padding-top: 4px;
+	padding-bottom:4px;
+}
+
+#foottxt {
+	font-size: 20px;
+	text-align: center;
 }
