--- a/style.css
+++ b/style.css
@@ -37,10 +37,22 @@ body {
 	padding-top: 50px;
 }
 
+#Var_Hjalp_titel  {
+	text-align: center;
+	padding-top: 50px;
+}
+
 #txt {
 	padding-left: 20px;
 	padding-right: 20px;
 }
+
+#Var_Hjalp_txt {
+	text-align: center;
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
 
 .navbar {
 	background-color: #121212;
@@ -51,6 +63,15 @@ body {
 	margin-right: 11.26%;
 }
 
+.navbar_country {
+	background-color: #121212;
+	padding-top: 3px;
+	padding-bottom: 3px;
+	padding-left: 7px;
+	margin-left: 12%;
+	margin-right: 12%;
+}
+
 .navbarsize {
 	width: 290px;
 	font-family: "Arial";
@@ -58,8 +79,19 @@ body {
 	text-align: center;
 }
 
+.navbarsize_country {
+	width: 200px;
+	font-family: "Arial";
+	font-size: 15px;
+	text-align: center;
+}
+
 .navbarsize:hover, .navcolor:hover  {
-	background: black; !important
+	background-color: black; !important
+}
+
+.navbarsize_country:hover, .navcolor_country:hover  {
+	background-color: black; !important
 }
 
 a.navcolor, a.navcolor:hover {
